--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="../public/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Au petit Village</title>
-  <meta description="Au Petit Village, boutique en ligne dédiée aux fans d’Astérix & Obélix : figurines, héros gaulois et humour légendaire livrés chez vous !">
+  <meta description="Au Petit Village, boutique en ligne dédiée aux fans d’Astérix & Obélix : figurines livrés chez vous !">
 
    <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
